--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:image" content=" https://hohuyhoang24.github.io/ho-huy-hoang/n.jpg" />
+    <link rel="icon" href="./img/meo.png" type="img/gif" sizes="16*16" >
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/spinload.css">
